; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_x509.c_mbedtls_x509_sig_alg_gets.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_x509.c_mbedtls_x509_sig_alg_gets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"???\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@MBEDTLS_X509_SAFE_SNPRINTF = common dso_local global i32 0, align 4
@MBEDTLS_PK_RSASSA_PSS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_x509_sig_alg_gets(i8* %0, i64 %1, i32* %2, i64 %3, i64 %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  store i8* %5, i8** %12, align 8
  %17 = load i8*, i8** %7, align 8
  store i8* %17, i8** %14, align 8
  %18 = load i64, i64* %8, align 8
  store i64 %18, i64* %15, align 8
  store i8* null, i8** %16, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @mbedtls_oid_get_sig_alg_desc(i32* %19, i8** %16)
  store i32 %20, i32* %13, align 4
  %21 = load i32, i32* %13, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %6
  %24 = load i8*, i8** %14, align 8
  %25 = load i64, i64* %15, align 8
  %26 = call i32 (i8*, i64, i8*, ...) @mbedtls_snprintf(i8* %24, i64 %25, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i32 %26, i32* %13, align 4
  br label %32

27:                                               ; preds = %6
  %28 = load i8*, i8** %14, align 8
  %29 = load i64, i64* %15, align 8
  %30 = load i8*, i8** %16, align 8
  %31 = call i32 (i8*, i64, i8*, ...) @mbedtls_snprintf(i8* %28, i64 %29, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %30)
  store i32 %31, i32* %13, align 4
  br label %32

32:                                               ; preds = %27, %23
  %33 = load i32, i32* @MBEDTLS_X509_SAFE_SNPRINTF, align 4
  %34 = load i64, i64* %10, align 8
  %35 = load i64, i64* %11, align 8
  %36 = load i8*, i8** %12, align 8
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* %15, align 8
  %39 = sub i64 %37, %38
  %40 = trunc i64 %39 to i32
  ret i32 %40
}

declare dso_local i32 @mbedtls_oid_get_sig_alg_desc(i32*, i8**) #1

declare dso_local i32 @mbedtls_snprintf(i8*, i64, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
